Created a razor form

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     //var productName = "Free Billing Services";
     //throw new InvalidOperationException("Bad things happen to good developers.");
     ViewBag.Title = "Home Page";
-    Layout = "_Layout";
+    //Layout = "_Layout";
 }
 
     <h1>Free Billing</h1>
