--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Free Billing - @ViewBag.Title</title>
+    @RenderSection("header", false)
 </head>
 <body>
     <header>
@@ -17,5 +18,6 @@
         @RenderBody()
     </div>
     <footer>&copy; 2024 Free Billing</footer>
+    @RenderSection("scripts", false)
 </body>
 </html>
