Added a script tag to load font awesome library and use it

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
                    bg-blue-900
                    text-white
                    p-3">
-        <h1 class="font-bold text-2xl">Free Billing</h1>
+        <h1 class="font-bold text-2xl"><i class="fa-solid fa-file-lines"></i> Free Billing</h1>
         <ul class="flex text-blue-300">
             <li class="mx-2 hover:text-blue-500"><a href="/">Home</a></li>
             <li class="mx-2 hover:text-blue-500"><a href="/Contact">Contact</a></li>
@@ -25,5 +25,6 @@
     </div>
     <footer class="text-center bg-black text-white">&copy; 2024 Free Billing</footer>
     @RenderSection("scripts", false)
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js" integrity="sha512-u3fPA7V8qQmhBPNT5quvaXVa1mnnLSXUep5PS1qo5NRzHwG19aHmNJnj1Q8hpA/nBWZtZD4r4AX6YOt5ynLN2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>"
 </body>
 </html>
