--- a/Pages/Contact.cshtml
+++ b/Pages/Contact.cshtml
@@ -9,35 +9,38 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.min.js"></script>
 }
 
-<h1>@Model.Title</h1>
-<form method="post">
-    <div asp-validation-summary="ModelOnly" style="color:red;"></div>
-    <label asp-for="Contact.Name">Name</label>
-    <br />
-    <input asp-for="Contact.Name" />
-    <span asp-validation-for="Contact.Name"></span>
-    <br />
-    <label asp-for="Contact.Email">Email</label>
-    <br />
-    <input asp-for="Contact.Email" />
-    <span asp-validation-for="Contact.Email"></span>
-    <br />
-    <label asp-for="Contact.Subject">Subject</label>
-    <br />
-    <select asp-for="Contact.Subject">
-        <option>Work</option>
-        <option>Personal</option>
-        <option>Proposal</option>
-    </select>
-    <span asp-validation-for="Contact.Subject"></span>
-    <br />
-    <label asp-for="Contact.Body">Message</label>
-    <br />
-    <textarea rows="4" asp-for="Contact.Body"></textarea>
-    <span asp-validation-for="Contact.Body"></span>
-    <br />
-    <button type="submit">Send</button>
-    <br />
-    <div>@Model.Message</div>
-</form>
+<div class="w-96 mx-auto bg-white p-2">
+    <h1>@Model.Title</h1>
+    <form method="post">
+        <div asp-validation-summary="ModelOnly"></div>
+        <label asp-for="Contact.Name">Name</label>
+        <br />
+        <input asp-for="Contact.Name" />
+        <span asp-validation-for="Contact.Name"></span>
+        <br />
+        <label asp-for="Contact.Email">Email</label>
+        <br />
+        <input asp-for="Contact.Email" />
+        <span asp-validation-for="Contact.Email"></span>
+        <br />
+        <label asp-for="Contact.Subject">Subject</label>
+        <br />
+        <select asp-for="Contact.Subject">
+            <option>Work</option>
+            <option>Personal</option>
+            <option>Proposal</option>
+        </select>
+        <span asp-validation-for="Contact.Subject"></span>
+        <br />
+        <label asp-for="Contact.Body">Message</label>
+        <br />
+        <textarea rows="4" asp-for="Contact.Body"></textarea>
+        <span asp-validation-for="Contact.Body"></span>
+        <br />
+        <button class="bg-green-600 hover:bg-green-800" type="submit">Send</button>
+        <button>Cancel</button>
+        <br />
+        <div>@Model.Message</div>
+    </form>
+</div>
 
