--- a/wwwroot/site.src.css
+++ b/wwwroot/site.src.css
@@ -1,3 +1,42 @@
 ﻿@tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    label {
+        @apply font-bold;
+    }
+
+    input[type=text], input[type=email], textarea, select {
+        @apply w-full p-1 text-lg border-2 rounded border-gray-200;
+    }
+
+    h1, h2, h3, h4 {
+        @apply font-bold;
+    }
+
+    h1 {
+        @apply text-2xl;
+    }
+    
+    h2 {
+        @apply text-xl;
+    }
+    
+    h3 {
+        @apply text-lg;
+    }
+
+    h4 {
+        @apply text-lg italic;
+    }
+
+    button {
+        @apply bg-gray-600 text-white font-bold hover:bg-gray-800 rounded-lg p-2;
+    }
+}
+    
+.field-validation-error {
+    @apply text-red-500 italic;
+}
+
