--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
         <ul class="flex text-blue-300">
             <li class="mx-2 hover:text-blue-500"><a href="/">Home</a></li>
             <li class="mx-2 hover:text-blue-500"><a href="/Contact">Contact</a></li>
+            <li class="mx-2 hover:text-blue-500"><a href="/Customers">Customers</a></li>
         </ul>
     </header>
     <div class="bg-gray-400 p-2 w-full h-[calc(100vh-75px)] overflow-auto">
