Added a section header injecting a base href for rendering from the root or base URL for the project

--- a/Pages/CustomerBilling.cshtml
+++ b/Pages/CustomerBilling.cshtml
@@ -7,6 +7,10 @@
     // This is specific to development
 *@
 
+@section Header {
+    <base href="/customerBilling"/>
+}
+
 @section scripts
 {
     <script type="module" src="http://localhost:5174/src/main.js"></script>
