Added an input type number for main css using tailwind to use it on the billing view

--- a/wwwroot/site.src.css
+++ b/wwwroot/site.src.css
@@ -7,7 +7,7 @@
         @apply font-bold;
     }
 
-    input[type=text], input[type=email], input[type=password], textarea, select {
+    input[type=text], input[type=email], input[type=number], input[type=password], textarea, select {
         @apply w-full p-1 text-lg border-2 rounded border-gray-200;
     }
 
