--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,12 +5,12 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="flex">
-    <div class="w-1/3">
+<h1 class="text-center">@ViewData["Title"]</h1>
+<div class="flex justify-center items-center min-h-screen bg-gray-100">
+    <div class="w-1/3 bg-white p-6 rounded shadow-md">
         <section>
             <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
+                <h2 class="text-center">Use a local account to log in.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                 <div class="form-floating mb-3">
@@ -30,10 +30,10 @@
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="btn btn-primary bg-green-700 hover:bg-green-600 text-white">Log in</button>
+                    <button id="login-submit" type="submit" class="btn btn-primary bg-green-700 hover:bg-green-600 text-white w-full">Log in</button>
                 </div>
                 <div>
-                    <p>
+                    <p class="mt-3">
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
                     <p>
@@ -44,36 +44,6 @@
                     </p>
                 </div>
             </form>
-        </section>
-    </div>
-    <div class="w-1/3">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
         </section>
     </div>
 </div>
